# gravitle

./: .gitignore  Cargo.toml  DEV.md  README.md  TODO.md  alchemy  alchemy.mmd  alchemy.txt  all.sh  bench.sh  build.sh  build_chrono.sh  build_mining.sh  build_short.sh  deploy.sh  deploy_ignore  docker-compose.yml  format.sh  front.sh  front_deployed.sh  generate.sh  go.sh  gravitle.sh  kind.json  lint.sh  lint_mining.sh  notes.md  poc.py  predeploy.sh  setup.sh  test.sh
_old/: configuration.yml  misc.md
_old/ai/: Dockerfile  docker-compose  install.sh  lint.sh  prom.sh  requirements.txt  test.csv  train copy.py  train.csv  train.py  train.sh  train_2.csv
_old/cli/: Cargo.toml
_old/core/: Cargo.toml
_old/front copy/: docker-compose.yml  go.sh  index.css  index.js
_old/front_old_2022/: 404.html  docker-compose.yml  index.css  index.js  package-lock.json  package.json  renderer_util.js  util.js  webgpu_renderer.js  webgpu_server.js  webpack.config-prod.js  webpack.config.js
_old/gravitle/: Cargo.toml  format.sh
_old/gravitle/src/: main.rs  network.rs  particle.rs
_old/gravitle/src/setup/: setup_5.rs
_old/server/: Cargo.toml
_old/server/src/: data.rs  entity.rs  gravitle.rs  link.rs  maths.rs
_old/server/src/tests/: mod.rs
ai/: build_training_set.py  build_training_set.sh  common.py  math.py  prom_conf.yml  pylintrc  requirements.txt  test.csv  train.csv  train.py  train.sh
blueprint/: logo.txt  ship.js  ship.txt  ship_1.js  ship_1.txt  ship_2.js  ship_2.txt
cli/: Cargo.toml  cli.sh
client/: Cargo.toml
client/src/: main.rs
docs/: 0.bootstrap.js  10.bootstrap.js  183.bootstrap.js  404.html  CNAME  bootstrap.js  index.css  index.html  parts-bootstrap.js  parts.css  playground.html  style.css  util.js
front/: body.js  build.sh  canvas.js  canvas_renderer.js  deploy_ignore  go.sh  index.css  index.html  index.js  intro  kind.js  kind_generated.js  link.js  materials.js  moderate  package-lock.json  package.json  particle.js  particle_draw.js  parts-bootstrap.js  parts.html  parts_index.js  renderer_util.js  resources_generated.js  ship.js  simulation.js  simulation_gpu.js  util.js  webgpu_renderer.js  webgpu_server.js  webpack.config.js
front-2/: canvas.js  docker-compose.yml  go.sh  index.css  index.html  index.js  index0.js  math.js
front/chrono/engine/: Cargo.toml
front/chrono/engine/src/: cell.rs  compute.js  lib.rs  link.rs  math.rs  point.rs  sfc32.rs  utils.rs  world.rs
front_old/: index.html  index.js
frontend/: bootstrap.js  examples.js  index.css  index.html  index.js  main.js  package-lock.json  playground.html  playground.js  render.js  site.webmanifest  style.css  tests.js  utils.js  webgl-renderer.js  webpack.config.js
generate/: Dockerfile  blueprint.py  color.py  inner.sh  kind.py  main.py  math.py  misc.py  user_kind.py
gravithrust/: Cargo.toml  LICENSE  alchemy.txt  bench.txt  bench_setup.txt  build.rs  clippy.toml  rustfmt.toml
gravithrust/builder/: alchemy.rs  helpers.rs  mod.rs
gravithrust/src/: alchemy.rs  alchemy_generated.rs  alchemy_generated_2.rs  blueprint.rs  gravithrust copy.rs  gravithrust.rs  gravithrust_check_job.rs  gravithrust_tick.rs  gravithrust_update_particles.rs  grid.rs  grid_.rs  job.rs  kind.json  kind.rs  kind_generated.rs  kind_generated.rs.template  lib.rs  link.rs  math.rs  math_small.rs  mod.rs  models.rs  movement.rs  particle.rs  ship.rs
gravithrust/src/action/: collect.rs  deliver.rs  mod.rs
gravithrust/src/bench/: bench_tick.rs  helpers.rs  mod.rs
gravithrust/src/blueprint/: blueprint_01.yml  blueprint_02.yml  blueprint_04.yml  coal_collector.yml  iron_ore_collector_2.yml  plasma_depot.yml  plasma_refinery.yml  small_ship.yml
gravithrust/src/job/: coal_collector.json  iron_ore_collector.json  plasma_collector.json  plasma_transporter.json
gravithrust/src/job copy/: electro_field_launcher.json  mothership.json  plasma_collector.json
gravithrust/src/models/: mod.rs  model_1.rs  model_2.rs
gravithrust/src/test/: bench_tick.rs  helpers.rs  mod.rs  test_1.rs  test_2.rs  test_job.rs
gravithrust/template/: alchemy.txt  alchemy_generated.rs  kind.json  kind_generated.rs
gravitle/: Cargo.toml  build.sh  format.sh  run.sh  test.sh
gravitle-editor/: index.css  index.html  index.js
gravitle-gpu/: Cargo.toml  build.rs
gravitle-gpu/client/: conf.js  fragment_shader.js  gl.js  index.css  index.html  index.js  render.js  render_gl.js  vertex_shader.js
gravitle-gpu/configurations/: activation.json  alchemy.json  demo.json  link.json  performance-2.json  performance.json  small.json  spaceship-2.json  spaceship.json  thrust.json  wrap-around.json
gravitle-gpu/src/: compute-shader.glsl  configuration.rs  cs.rs  data.rs  main.rs  particle.rs  point.rs  server.rs  vector.rs
gravitle-poc/: .gitignore  Cargo.toml
gravitle-website/: README.md  package-lock.json
gravitle_simd/: Cargo.toml  build.sh  go.sh  test.sh
gravitle_simd_2/: run.sh
issues/: 2025-10-08.md
ops/: root_setup_server.sh
ressources/: favicon.xcf
scripts/: gravitle-gpu.sh  initial-setup.sh
server/: Cargo.toml
server/src/: data.rs  entity.rs  gravitle.rs  gravitle0.rs  main.rs  main_hashmap.rs  main_hashmap2.rs  main_hashmap20.rs  maths.rs  maths0.rs  maths3d.rs  part.rs  plan.rs  test2.rs  websocket.rs  websocket_async.rs
server/src/server_1/: websocket.rs
server/src/server_2/: server.rs  websocket.rs
server/src/tests/: maths.rs  mod.rs  plan.rs  test_vec.rs
server_2/: Cargo.toml
sound/: _go.sh  canvas.js  docker-compose.yml  index.css  index.html  index.js  math.js
src/: collision.rs  intersection.rs  lib.rs  link.rs  link_intersection.rs  particle.rs  point.rs  segment.rs  trajectory.rs  utils.rs  vector.rs  wrap_around.rs
wasm/: Cargo.toml  LICENSE_MIT
wip/: Cargo.toml  build.sh  format.sh  run.sh
(+332 files in other folders)
