[package]
name = "server_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tungstenite = "*"
uuid = { version = "*", features = ["v4", "serde"] }
serde = { version = "*", features = ["derive"]}
serde_json = "*"
bincode = "*"
core = { path = "../core" }
