[package]
name = "gravithrust"
version = "0.1.0"
edition = "2021"
description = "Gravithrust"
repository = "https://github.com/loicbourgois/gravitle/"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib"]

# [profile.release]
# lto = true
# codegen-units = 1

[dependencies]
wasm-bindgen = "*"
rand = "*"
getrandom = { version = "*", features = ["js"] }
serde = { version = "*", features = ["derive"] }
serde_yaml = "*"
serde_json = "*"
anyhow = "*"
js-sys = "*"

[build-dependencies]
anyhow = "*"
convert_case = "*"
serde_json = "*"
serde = { version = "*", features = ["derive"] }

[dev-dependencies]
glob = "*"
rand_chacha = "*"

[features]
bench = []
