[package]
name = "blooper"
version = "0.1.0"
authors = ["loicbourgois <lbourgois@scaleway.com>"]
edition = "2018"

[dependencies]
vulkano = "0.19"
rand = "0.7.3"
vulkano-shaders = "0.18"
arrayvec = "0.4.10"
serde = { version = "1.0.116", features = ["derive"]}
serde_json = "1.0.57"
tungstenite = "0.11.1"
