[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tokio = { version= "1", features = ["full"] }
# tokio-stream = "0.1"
# warp = "0.3"
serde = { version = "1", features = ["derive"]}
serde_json = "1"
# futures = { version = "0.3", default-features=false}
uuid = { version = "0.8", features = ["v4", "serde"] }
tungstenite = "0.16.0"
rand = "0.8"
num_cpus = "*"
