[package]
name = "wip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
tokio-tungstenite = "*"
futures-channel = "*"
tungstenite = "*"
futures-util = "*"
tokio = { version = "1", features = ["macros", "rt", "rt-multi-thread", "io-util"] }
chrono = "*"

[dependencies.uuid]
version = "1.2.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
